Try to fix image path

--- a/content/DocumentPreparation/Latex/LatexRelated.adoc
+++ b/content/DocumentPreparation/Latex/LatexRelated.adoc
@@ -24,4 +24,7 @@ https://www.texstudio.org/[Official Site]
 
 image::img/TeXstudio - download versions.png[]
 
+Notes TeXstudio needs MiKTe to execute correctly. The best solution is to put MikTex executables folder into the path.
+
+
 === Configuration file
