--- a/content/GuiFrameworks/wxWidgets/wxWidgets.adoc
+++ b/content/GuiFrameworks/wxWidgets/wxWidgets.adoc
@@ -13,7 +13,11 @@ As stated on the official site (see references).
 
 *wxWidgets* is a C++ library that lets developers create applications for Windows, macOS, Linux and other platforms with a single code base.
 
+*wxWidgets* is a programmer’s toolkit for writing desktop or mobile applications with graphical user interfaces (GUIs).
+
 It has popular language bindings for _Python_, _Perl_, _Ruby_ and many other languages, and unlike other cross-platform toolkits, wxWidgets gives applications a truly native look and feel because it uses the platform's native API rather than emulating the GUI.
+
+*wxWidgets* provides classes for files and streams, multiple threads, application settings, interprocess communication, online help, database access, and much more.
 
 === References
 
@@ -22,6 +26,14 @@ https://www.wxwidgets.org/[Main Site]
 https://docs.wxwidgets.org/trunk/index.html[Documentation]
 
 https://wiki.wxwidgets.org/Main_Page[Wiki]
+
+==== Books
+
+*Cross-Platform GUI Programming with wxWidgets*
+
+    by Julian Smart and Kevin Hock with Stefan Csomor
+    Prentice Hall
+    2006 Pearson Education
 
 == Cookbook
 
@@ -123,3 +135,20 @@ image::img/WidgetsZipAndRelese_wxMSW-3.1.5_vc14x_x64_ReleaseDLL_lib_vc14x.png[]
 * Debug
 +
 image::img/wxWidgets_x64_Debug.png[]
+
+
+== Programming notes
+
+You need not to define a main/Winmain function. A system of macros generates the necessary function.
+
+The macro wxIMPLEMENT_APP should be called only once with the derived App class for your application.
+
+
+[source,c++]
+----
+// Use this macro exactly once, the argument is the name of the wxApp-derived
+// class which is the class of your application.
+#define wxIMPLEMENT_APP(appname)            \
+    wxIMPLEMENT_WX_THEME_SUPPORT            \
+    wxIMPLEMENT_APP_NO_THEMES(appname)
+----
