--- a/content/Libraries/C++/LibCurl/LibCurl.adoc
+++ b/content/Libraries/C++/LibCurl/LibCurl.adoc
@@ -97,6 +97,8 @@ int main()
 
 == Development with C++
 
+
+=== Introduction
 Libcurl with c++
 There's basically only one thing to keep in mind when using C++ instead of C when interfacing libcurl:
 
@@ -110,6 +112,44 @@ class AClass {
 static size_t write_data(void *ptr, size_t size, size_t nmemb, void *ourpointer)
     {
         /* do what you want with the data */
+    }
+}
+----
+
+=== Exemples
+==== Simple get with writting to the file
+
+[source, c++]
+----
+#include <iostream>
+#define CURL_STATICLIB
+#include <curl/curl.h>
+
+// to avoid issue with fopen
+#pragma warning(disable:4996)
+
+int main()
+{
+    CURL* curl;
+    CURLcode res;
+
+    curl = curl_easy_init();
+    if (curl) {
+        curl_easy_setopt(curl, CURLOPT_URL, "https://www.google.com");
+
+        FILE* file = fopen("google_com.htm", "w");
+
+        curl_easy_setopt(curl, CURLOPT_WRITEDATA, file);
+        /* Perform the request, res will get the return code */
+        res = curl_easy_perform(curl);
+        /* Check for errors */
+        if (res != CURLE_OK)
+            std::cerr << "curl_easy_perform() failed:" << curl_easy_strerror(res) << std::endl;
+
+
+        /* always cleanup */
+        curl_easy_cleanup(curl);
+        fclose(file);
     }
 }
 ----
