Update unit test

--- a/content/UnitTests/UnitTests.adoc
+++ b/content/UnitTests/UnitTests.adoc
@@ -1,13 +1,15 @@
 = Unit Tests
 Doc Writer <christian.popescu@outlook.com>
-v 1.0, 2019-12-14
+v 1.1, 2022-11-30
 :sectnums:
 :toc:
 :toclevels: 5
-+
+
 include::GoogleTest/GoogleTest.adoc[Google Tests]
 
-// include::ncurses/ncurses.adoc[]
+include::CSharp/CSharpUnitTest.adoc [CSharp UnitTest]
+
+
 
 
 
