--- a/content/KnowledManagementRoot.adoc
+++ b/content/KnowledManagementRoot.adoc
@@ -21,4 +21,4 @@ include::Containers/Containers.adoc[Containers]
 
 == Languages
 
-include::"Languages/C++/C++Language.adoc"[C++ Language]
+include::Languages/Cpp/CppLanguage.adoc[C++ Language]
