Add some documentation about QT

--- a/content/GuiFrameworks/GuiFrameworks.adoc
+++ b/content/GuiFrameworks/GuiFrameworks.adoc
@@ -9,6 +9,6 @@ v 1.0, 2019-12-21
 Gui Frameworks known also as widget toolkits are used to construct Graphical User Interface programs.
 
 :imagesdir: Qt
-include::Qt/Qt.adoc[]
+link:Qt/Qt.adoc[]
 
 
