Add linqpad script + PlantUml page

--- a/content/pages/HostingHttpServers/HostingHttpServers.adoc
+++ b/content/pages/HostingHttpServers/HostingHttpServers.adoc
@@ -4,7 +4,7 @@ v 1.0, 2025-05-30
 :sectnums:
 :toc:
 :toclevels: 5
-:imagesdir: img
+:imagesdir: {docdir}/img
 :imagesoutdir: {docdir}/img
 
 == Introduction
